--- a/package.json
+++ b/package.json
@@ -14,20 +14,26 @@
   "dependencies": {
     "hexo": "^6.2.0",
     "hexo-asset-image": "^1.0.0",
+    "hexo-autoprefixer": "^2.0.0",
     "hexo-blog-encrypt": "^3.1.6",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-feed": "^1.1.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-image-link": "^0.0.3",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-multi-markdown-it": "^0.1.5",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
+    "hexo-symbols-count-time": "^0.7.1",
     "hexo-tag-aplayer": "^3.0.4",
+    "hexo-theme-aurora": "^1.5.5",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-nexmoe": "^4.0.1",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-theme-stellar": "^1.9.0",
+    "hexo-wordcount": "^6.0.1",
+    "yarn": "^1.22.19"
   }
 }
